[tool.poetry]
name = "projet-e4"
version = "0.1.0"
description = ""
authors = ["alphae-nix <18laurent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.16.1"
ipwhois = "^1.2.0"
python-whois = "^0.7.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
