[tool.poetry]
name = "Surikatz"
version = "0.1.0"
description = "A powerful tool for searching informations during pentest"
authors = ["alphae-nix <18laurent@gmail.com>", 
           "Anemys <abdelmalik_kerbadou@yahoo.fr>",
           "NathanSaucet <pro.nathan.saucet@gmail.com>",
           "Mogulzz <raayanb94@gmail.com>",
           "blackjack-nix <theo.peresse-gourbil@edu.esiee.fr>",
           "CappiLucky <manon.hermann@edu.esiee.fr>"           ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.16.1"
click = "^8.0.4"
rich = "^11.2.0"
python-whois = "^0.7.3"
requests = "^2.27.1"
shodan = "^1.26.1"
untangle = "^1.1.1"
python-dotenv = "^0.19.2"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[tool.poetry.scripts]
surikatz = "surikatz.__main__:launch"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
