[tool.poetry]
name = "Surikatz"
version = "1.1"
description = "A powerful tool for searching informations during pentest"
authors = ["alphae-nix <18laurent@gmail.com>","Anemys <abdelmalik_kerbadou@yahoo.fr>","NathanSaucet <pro.nathan.saucet@gmail.com>","Mogulzz <raayanb94@gmail.com>","blackjack-nix <theo.peresse-gourbil@edu.esiee.fr>","CappiLucky <manon.hermann@edu.esiee.fr>",]
license = "GPL-3.0-only"

readme = "README.md"

include = ["surikatz/static/.env"]

repository = "https://github.com/Projet-AKKA-E4/Surikatz"

classifiers = [
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
rich = "^11.2.0"
python-whois = "^0.7.3"
requests = "^2.27.1"
shodan = "^1.26.1"
untangle = "^1.1.1"
python-dotenv = "^0.19.2"
pandas = "^1.4.1"
python-nmap = "^0.7.1"
dirsearch = "^0.4.2"
wpscan-out-parse = "^1.9.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.16.1"

[tool.poetry.scripts]
surikatz = "surikatz.__main__:init"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
